--- a/app/views/tweeets/show.html.erb
+++ b/app/views/tweeets/show.html.erb
@@ -1,9 +1,19 @@
 <p id="notice"><%= notice %></p>
+<div class="section">
+	<div class="container">
+		<div class="columns is-centered">
+      <div class="column is-half">
+        <h1>
+          <strong>Tweeet:</strong>
+        </h1>
+        <p>
+          <%= @tweeet.tweeet %>
+        </p>
+        <%= link_to 'Edit', edit_tweeet_path(@tweeet) %> |
+       <%= link_to 'Back', tweeets_path %>
+      
+			</div>
+		</div>
+	</div>
+</div>
 
-<p>
-  <strong>Tweeet:</strong>
-  <%= @tweeet.tweeet %>
-</p>
-
-<%= link_to 'Edit', edit_tweeet_path(@tweeet) %> |
-<%= link_to 'Back', tweeets_path %>
